--- a/style.css
+++ b/style.css
@@ -1,27 +1,39 @@
+:root{
+  --salmon: #EF9d71;
+  --black: #000;
+  --white: #fff;
+  --cyan: #80becc;
+  --dsalmon: #532521;
+  --dcyan: #1f2f32;
+
+}
 *::selection{
-  background-color:#ef9d71;
+  background-color: var(--salmon);
 }
 body[theme="black"]{
-  background-color: black;
+  background-color: var(--black);
 }
 body[theme="black"] .section{
-  color: white;
+  color: var(--white);
 }
 body[theme="cyan"]{
-  background-color: #80becc;
+  background-color: var(--cyan);
 }
 body[theme="cyan"] .section{
-color: #182427;
+color: var(--dcyan);
 }
 body[theme="salmon"]{
-  background-color: salmon;
+  background-color: var(--salmon);
 }
 body[theme="salmon"] .section{
-  color: rgb(29, 18, 17);
+  color: var(--dsalmon);
 }
 body[theme="white"]{
-  background-color: #fff;
+  background-color: var(--white);
 }
 body[theme="white"] .section{
-  color: #000;
+  color: var(--black);
 }
+/* .picture{
+  display: ;
+} */
