--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
 *::selection{
   background-color: var(--salmon);
 }
+.vidioDiv{
+  clip-path: circle(var(--clip) at 50% 50%);
+}
 body[theme="black"]{
   background-color: var(--black);
 }
