--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@
 .vidioDiv{
   clip-path: circle(var(--clip) at 50% 50%);
 }
+body{
+  transition: background-color ease-out 0.5s;
+}
 body[theme="black"]{
   background-color: var(--black);
 }
